working on compelling

--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -1,32 +1,36 @@
 \subsection{Attractive}
-Para conseguir este objetivo, es importante reflejar la informacion de una manera atractiva tanto desde un punto de vista conceptual como funcional, 
-es decir, dejando claro la implicacion de los datos y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
-actual
+Es importante que la informacion resulte atractiva tanto desde un punto de vista conceptual
+como funcional, es decir, dejando claro la implicacion de los datos como se ha visto en otros
+apartados y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
+
+
+Simplicidad,limpieza
 Este concepto es tambien aplicable a la representacion, debe seguir el mismo principio, huiremos de decoraciones inecesarias que hagan al 
 usuario perderse, solo debe contener la informacion necesaria para poder ser interpretada correctamente, es decir,
 toda representacion tienen que contarnos lo que significa sin tener que estar accediendo continuamente a informacion
 extra.
+Colores consistentes
+
+Estructuras consistentes
+
+Moderna
+
+Calidad
+
+Cercania
+Ademas se debera buscar la manera de presentar la informacion de una manera armonica y agradable para el usuario.
 
 \subsubsection{How to solve it} 
 Elementos de la vida real
-
+respetar colores para las misma funciones
 \subsubsection{How we solve it. Aire Guru} 
-Aire Guru se comprende de distintas secciones. Mediante la seleccion de un punto en el mapa, nos
-mostrara informacion detallada de este punto. A continuacion, cuenta con una seccion que filtrara la informacion acorde a las preferencias del usuario
-y para concluir, muestra el historial de los contaminantes desde 2018 y el historial de la polucion al que el usuario ha estado
-expuesto.
+Ademas en la 
+cultura occidental, se asocia este color con el aire.
 
-Es de preveer que el usuario estara interesado en el nivel de polucion al que esta expuesto a tiempo real, por ello, para usuarios
-que esten identificados y accedan a compartir su ubicacion, Aire Guru mostrara directeramente la polucion en el punto en el 
-que se encuentra.
-
-El workflow de las distintas secciones de Aire Guru esta detalladamente estudiada. Como vemos en la Figura X. Aire Guru. Landing page. Top section, el punto de partida es la localizacion que nos interesa,
-a continuacion se muestra la informacion general de este punto, el AQI general, despues el AQI de cada uno de los contaminantes que componen el 
-AQI general y por ultimo los valores numericos de cada uno de los contaminantes. Como vemos vamos de menos a mas detalle.
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
     \crossed
-    
+    \crossed Mas diseno
 \end{itemize}
 \newpage
