attractive adding points

--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -1,10 +1,47 @@
 \subsection{Attractive}
-Es importante que la informacion resulte atractiva tanto desde un punto de vista conceptual
-como funcional, es decir, dejando claro la implicacion de los datos como se ha visto en otros
-apartados y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
+Es importante que la informacion resulte atractiva, llamativa, con chispa. No solo desde un punto de vista conceptual
+o funcional como vimos en el apartado de relevante, donde dejamos claro la implicacion de los datos y la importancia
+de su correcta presentacion, con una estructura que guie al usuario de una manera logica y ordenada.
+
+Tiene que agarrar nuestra atencion, para ello podremos proponernos los siguientes requisitos, que sea divertida, entretenida,
+moderna, actual, cercana, de calidad, bella y armonica.
+
+Aunque estas caracteristicas sean subjetivas, existen tecnicas para poder lograr estos objetivos.
+
+Otras caracteristicas mas tecnicas son:\\
+ 
+\textbf{Consistencia.} Los controles que realizen las mismas acciones debe mantener el mismo diseno.\\
+
+\textbf{Limpieza.} \\
+
+\textbf{Simplicidad.} \\
+
+\textbf{Familiaridad.} \\
+
+\textbf{Estandares.} \\
+
+\textbf{Detalles.} \\
 
 
-Simplicidad,limpieza
+
+\subsubsection{How to solve it} 
+Para poder realizar un diseno atractivo, hay que estudiar las tendencias del momento y aplicarlas. 
+
+Elementos de la vida real
+respetar colores para las misma funciones
+\subsubsection{How we solve it. Aire Guru} 
+Ademas en la 
+cultura occidental, se asocia este color con el aire.
+
+\elsparagraph{Evaluation}  
+\begin{itemize}
+    \done
+    \crossed
+    \crossed Mas diseno
+\end{itemize}
+
+\begin{comment}
+    Simplicidad,limpieza
 Este concepto es tambien aplicable a la representacion, debe seguir el mismo principio, huiremos de decoraciones inecesarias que hagan al 
 usuario perderse, solo debe contener la informacion necesaria para poder ser interpretada correctamente, es decir,
 toda representacion tienen que contarnos lo que significa sin tener que estar accediendo continuamente a informacion
@@ -19,18 +56,5 @@ Calidad
 
 Cercania
 Ademas se debera buscar la manera de presentar la informacion de una manera armonica y agradable para el usuario.
-
-\subsubsection{How to solve it} 
-Elementos de la vida real
-respetar colores para las misma funciones
-\subsubsection{How we solve it. Aire Guru} 
-Ademas en la 
-cultura occidental, se asocia este color con el aire.
-
-\elsparagraph{Evaluation}  
-\begin{itemize}
-    \done
-    \crossed
-    \crossed Mas diseno
-\end{itemize}
+\end{comment}
 \newpage
