working on attractive

--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -22,7 +22,7 @@ Otras caracteristicas mas tecnicas son:\\
 
 \textbf{Detalles.} \\
 
-
+Sena de identidad
 
 \subsubsection{How to solve it} 
 Para poder realizar un diseno atractivo, hay que estudiar las tendencias del momento y aplicarlas. 
@@ -30,8 +30,18 @@ Para poder realizar un diseno atractivo, hay que estudiar las tendencias del mom
 Elementos de la vida real
 respetar colores para las misma funciones
 \subsubsection{How we solve it. Aire Guru} 
-Ademas en la 
-cultura occidental, se asocia este color con el aire.
+Como comentabamos anteriormente el diseno se ha basado en material design, utilizar lineas rectas, diferencia
+distintas secciones mediante rectangulos. Estas secciones se componen de una cabecera y un cuerpo. Esta estructura
+se repite durante todo el diseno.
+Tipo de letra
+Contraste
+No hay muchos colores, combinacion reducida de tonalidades
+Icono simple y con significado
+Nombre, significado
+Estandares, funcion de espera, cambio de color con pulsacion, subrayado para los links
+Iconografia representativa
+Efectos graficas se dibujan progesivamente
+Diseno personalizado
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
