--- a/contents/compelling/engagement.tex
+++ b/contents/compelling/engagement.tex
@@ -8,7 +8,10 @@ actual
 
 
 \subsubsection{How we solve it. Aire Guru} 
- 
+Aire Guru cuenta con una seccion de ayuda  donde explica cada una de las secciones de la herramienta. Una de las acciones mas complicadas
+podria ser la importacion del historial de ubicaciones de Google para ver la exposicion a la que estamos expuestos. Esta ayuda, tambien 
+contiene un apartado donde se explica paso a paso como obtener el historia de ubicaciones e importarlo en Aire Guru.
+personal-familiar, hablar de las nubes
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
